# bot

./: Untitled.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/bumperbot_examples/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  AddTwoints.h  AddTwointsRequest.h  AddTwointsResponse.h  GetTransformRequest.h  GetTransformResponse.h
devel/lib/bumperbot_controller/: simple_controller_node.py
devel/lib/bumperbot_examples/: simple_service_cilent.py  simple_service_server.py  simple_subscriber.py  tf_examples_node.py
devel/lib/bumperbot_localization/: imu_republisher_node.py
devel/lib/pkgconfig/: bringup.pc  bumperbot_controller.pc  bumperbot_description.pc  bumperbot_examples.pc  bumperbot_localization.pc  my_robot_model.pc
src/bringup/: CMakeLists.txt
src/bringup/config/: trajectory_planner.yaml
src/bumperbot_controller/: CMakeLists.txt  setup.py
src/bumperbot_controller/config/: joystick.yaml  simple_controller.yaml
src/bumperbot_controller/launch/: controller.launch  controllerold.launch
src/bumperbot_controller/src/bumperbot_controller/: simple_controller.py  simple_controllerold.py
src/bumperbot_description/: package.xml
src/bumperbot_description/launch/: display.launch  displayold.launch  gazebo.launch
src/bumperbot_description/rviz/: display.rviz
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot1.urdf  bumperbot_gazebo.xacro
src/bumperbot_examples/: CMakeLists.txt  package.xml
src/bumperbot_examples/config/: simple_configuration.yaml
src/bumperbot_examples/src/bumperbot_examples/: tf_examples.py  turtlesim_kinematics.py
src/bumperbot_localization/: CMakeLists.txt  package.xml
src/bumperbot_localization/launch/: local_localization.launch
src/bumperbot_localization/src/bumperbot_localization/: kalman_filter.py
src/my_robot_model/: CMakeLists.txt  package.xml
src/my_robot_model/maps/: map_new.pgm  map_new.yaml
src/my_robot_model/rviz/: my_robo.rviz  my_robo_mapping.rviz  (+1 more)
(+29 files in other folders)
